--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+
+//padding small
+
+.ps {
+  padding: 1.5rem;
+}
+
+// padding-top small
+.pts {
+  padding-top: 0.5rem;
+}
+
+// text-alignment
+
+// text-center
+.tc {
+  text-align: center;
+}
+
+//buttons
+.btn {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  border: 1px solid #fff;
+  text-align: center;
+  font-weight: 400;
+  font-size: 10px;
+  // display: inline-block;
+  // font-weight: 400;
+  // line-height: 1.5;
+  // color: #212529;
+  // text-align: center;
+  // text-decoration: none;
+  // vertical-align: middle;
+  // cursor: pointer;
+  // -webkit-user-select: none;
+  // -moz-user-select: none;
+  // user-select: none;
+  // background-color: transparent;
+  // border: 1px solid transparent;
+  // padding: 0.375rem 0.75rem;
+  // font-size: 1rem;
+  // border-radius: 0.25rem;
+  // transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  //   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #A2A2A2;
+  border-color: #fff;
+}
