--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
-
 //padding small
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import "./variables";
+
+html, body {
+  font-family: 'Open Sans', sans-serif;
+}
 
 .ps {
   padding: 1.5rem;
@@ -28,28 +32,19 @@
   text-align: center;
   font-weight: 400;
   font-size: 10px;
-  // display: inline-block;
-  // font-weight: 400;
-  // line-height: 1.5;
-  // color: #212529;
-  // text-align: center;
-  // text-decoration: none;
-  // vertical-align: middle;
-  // cursor: pointer;
-  // -webkit-user-select: none;
-  // -moz-user-select: none;
-  // user-select: none;
-  // background-color: transparent;
-  // border: 1px solid transparent;
-  // padding: 0.375rem 0.75rem;
-  // font-size: 1rem;
-  // border-radius: 0.25rem;
-  // transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-  //   border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  text-decoration: none;
+   vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 .btn-primary {
   color: #fff;
-  background-color: #A2A2A2;
+  background-color: #A4B5B8;
   border-color: #fff;
 }
