--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,17 +1,20 @@
 <div>
-  <div class="hero-selection">
+<!--  <div class="hero-selection">
     <label class="x-selector" (keydown.enter)="selectCharacter(characterName1, hero1)">
       X: <input [(ngModel)]="characterName1">
     </label>
+    <div *ngFor="let hero1Data of hero1">
+      <img [src]='hero1Data' alt="img" />
+    </div>
 
     <label (keydown.enter)="selectCharacter(characterName2, hero2)">
       O: <input [(ngModel)]="characterName2">
     </label>
-  </div>
+    <button (click)="clickToSelectCharacters()">Start Game</button>
+  </div>-->
 
   <div>
     <div class="scoreboard">
-
       <div class="o-win">
         <img src="assets/icons/ellipse.svg" alt="y_icon">
         {{countYWin}} vitórias
